--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
    <header>
         <div class="logo">
-                <img src="/images/logo/zions_logo.jpeg" alt="zions Logo">
+                <img src="zions_logo.jpeg" alt="zions Logo">
             </div>
     
     </header>
@@ -24,9 +24,9 @@
     </nav>
   <p><marquee class="marquee" behavior="scroll" direction="left" scrollamount="5" >
         🚀 Welcome to  
-        <img src="/images/logo/zions_logo_1.jpg" alt="zions_logo_1.jpg" width="30px" height="20px">
+        <img src="zions_logo_1.jpg" alt="zions_logo_1.jpg" width="30px" height="20px">
         ZIONS LIFTS 
-        <img src="/images/logo/zions_logo_2.jpg" alt="zions_logo_2.jpg" width="40px",height="18px">
+        <img src="zions_logo_2.jpg" alt="zions_logo_2.jpg" width="40px",height="18px">
         🚀
     </marquee></p><br><br><br>
   <p>
