--- a/services.html
+++ b/services.html
@@ -11,7 +11,7 @@
 
    <header>
         <div class="logo">
-                <img src="/images/logo/zions_logo.jpeg" alt="zions Logo">
+                <img src="zions_logo.jpeg" alt="zions Logo">
             </div>
     
     </header>
