--- a/contact.html
+++ b/contact.html
@@ -12,7 +12,7 @@
 
     <header>
         <div class="logo">
-                <img src="/images/logo/zions_logo.jpeg" alt="zions Logo">
+                <img src="zions_logo.jpeg" alt="zions Logo">
             </div>
     
     </header>
