--- a/services.html
+++ b/services.html
@@ -4,16 +4,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>LiftLogic - Elevating Your Experience</title>
+    <link rel="stylesheet" href="lifts.css">
+    <script src="lifts.js" defer></script>
 </head>
 <body>
-    <link rel="stylesheet" href="lifts.css">
-    <script src="lifts.js"></script>
-
-   <header>
+    <header>
         <div class="logo">
-                <img src="zions_logo.jpeg" alt="zions Logo">
-            </div>
-    
+            <img src="images/logo/zions_logo.jpeg" alt="Zions Logo">
+        </div>
     </header>
     <nav>
         <a href="index.html">Home</a>
@@ -23,69 +21,69 @@
     <div class="container">
         <section id="services">
             <h2>Our Services</h2>
-            <br><br><h3>Home Lifts</h3>
+            <h3>Home Lifts</h3>
             <div class="service">
-                <img src="\images\homelifts\autodoor_centeropening.jpg" alt="Home Lifts">
+                <img src="images/homelifts/autodoor_centeropening.jpg" alt="Home Lifts">
                 <h3>autodoor_centeropening</h3>
-             </div>
+            </div>
             <div class="service">
-                <img src="\images\homelifts\autodoor_centeropening_glass.jpg" alt="Home Lifts">
+                <img src="images/homelifts/autodoor_centeropening_glass.jpg" alt="Home Lifts">
                 <h3>autodoor_centeropening_glass</h3>
             </div>
             <div class="service">
-                <img src="\images\homelifts\autodoor_telescopic.jpg" alt="Home Lifts">
+                <img src="images/homelifts/autodoor_telescopic.jpg" alt="Home Lifts">
                 <h3>autodoor_telescopic</h3>
             </div>
             <div class="service">
-                <img src="\images\homelifts\manual_lift.jpg" alt="Home Lifts">
+                <img src="images/homelifts/manual_lift.jpg" alt="Home Lifts">
                 <h3>manual_lift</h3>
             </div>
             <div class="service">
-                <img src="\images\homelifts\mscabin.jpg" alt="Home Lifts">
+                <img src="images/homelifts/mscabin.jpg" alt="Home Lifts">
                 <h3>mscabin Lifts</h3>
             </div>
             <div class="service">
-                <img src="\images\homelifts\mscabin_1.jpg" alt="Home Lifts">
+                <img src="images/homelifts/mscabin_1.jpg" alt="Home Lifts">
                 <h3>mscabin Lifts</h3>
             </div>
             <div class="service">
-                <img src="\images\homelifts\swing_door.jpg" alt="Home Lifts">
+                <img src="images/homelifts/swing_door.jpg" alt="Home Lifts">
                 <h3>swing_door Lifts</h3>
             </div>
-            <h3>Hospital Lifts</h3><br>
+            <h3>Hospital Lifts</h3>
             <div class="service">
-                <img src="\images\Hospitallifts\hospitallifts.jpg" alt="Hospital Lifts">
+                <img src="images/Hospitallifts/hospitallifts.jpg" alt="Hospital Lifts">
                 <h3>Hospital Lifts</h3>
             </div>
             <div class="service">
-                <img src="\images\Hospitallifts\hospitallifts_1.jpeg" alt="Hospital Lifts">
-                <h1>Hospital Lifts</h1>
+                <img src="images/Hospitallifts/hospitallifts_1.jpeg" alt="Hospital Lifts">
+                <h3>Hospital Lifts</h3>
             </div>
             <h3>Hydraulic Lifts</h3>
             <div class="service">
-                <img src="\images\hydrauliclifts\hydrauliclifts.jpg" alt="Hydraulic Lifts">
+                <img src="images/hydrauliclifts/hydrauliclifts.jpg" alt="Hydraulic Lifts">
                 <h3>Hydraulic Lifts</h3>
             </div>
             <div class="service">
-                <img src="\images\hydrauliclifts\hydrauliclifts_1.jpg" alt="Hydraulic Lifts">
+                <img src="images/hydrauliclifts/hydrauliclifts_1.jpg" alt="Hydraulic Lifts">
                 <h3>Hydraulic Lifts</h3>
             </div>
             <div class="service">
-                <img src="\images\hydrauliclifts\hydrauliclifts_2.jpg" alt="Hydraulic Lifts">
+                <img src="images/hydrauliclifts/hydrauliclifts_2.jpg" alt="Hydraulic Lifts">
                 <h3>Hydraulic Lifts</h3>
             </div>
             <h3>Structure Lifts</h3>
             <div class="service">
-                <img src="\images\structuredlifts\structuredlifts.jpg" alt="Structure Lifts">
+                <img src="images/structuredlifts/structuredlifts.jpg" alt="Structure Lifts">
                 <h3>Structure Lifts</h3>
             </div>
             <div class="service">
-                <img src="\images\structuredlifts\structuredlifts_1.jpg" alt="Structure Lifts">
+                <img src="images/structuredlifts/structuredlifts_1.jpg" alt="Structure Lifts">
                 <h3>Structure Lifts</h3>
             </div>
             <h3>Service for All Types of Lifts</h3>
             <div class="service">
-                <img src="\images\servicelift\servicelift.jpg" alt="Service for All Types of Lifts">
+                <img src="images/servicelift/servicelift.jpg" alt="Service for All Types of Lifts">
                 <h3>Service for All Types of Lifts</h3>
             </div>
         </section>
