--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@ Elevator Installation: We offer state-of-the-art elevator systems designed for b
 Maintenance and Repair: Regular maintenance is crucial for the smooth operation of elevators. Our team provides prompt and efficient maintenance services to prevent downtime and extend the lifespan of your elevators.
 Modernization: Upgrade your existing elevator systems with our modernization services. We enhance performance, safety, and aesthetics, ensuring your elevators meet the latest standards and technologies.
 Consultation: Our experts provide professional consultation services to help you choose the best elevator solutions for your building. We consider factors such as building design, usage patterns, and budget to recommend the most suitable options.</p>
-<h3>Why Choose LiftLogic?</h3>
+<h3>Why Choose ZIONS LIFTS?</h3>
 <p>
 Expertise and Experience: With years of experience in the elevator industry, our team possesses the knowledge and skills to handle any project, big or small.
 Customer-Centric Approach: We prioritize our clients’ needs and strive to deliver exceptional service. Our customer support team is always ready to assist you with any queries or concerns.
