--- a/index.html
+++ b/index.html
@@ -43,9 +43,9 @@ Expertise and Experience: With years of experience in the elevator industry, our
 Customer-Centric Approach: We prioritize our clients’ needs and strive to deliver exceptional service. Our customer support team is always ready to assist you with any queries or concerns.
 Safety and Compliance: Safety is our top priority. All our services comply with the highest safety standards and regulations, ensuring peace of mind for our clients.
 Innovative Solutions: We stay updated with the latest advancements in elevator technology to provide innovative and efficient solutions.
-At LiftLogic, we are committed to elevating your experience with our reliable and high-quality elevator services. Contact us today to learn more about how we can assist you with your elevator needs.</p>
+At ZIONSLIFTS, we are committed to elevating your experience with our reliable and high-quality elevator services. Contact us today to learn more about how we can assist you with your elevator needs.</p>
     <footer>
-        <p>&copy; 2024 LiftLogic. All rights reserved.</p>
+        <p>&copy; 2017 ZIONSLIFTS. All rights reserved.</p>
     </footer>
 </body>
 </html>
