--- a/contact.html
+++ b/contact.html
@@ -44,7 +44,7 @@
         </div>
     </div>
     <footer>
-        <p>© 2024 LiftLogic. All rights reserved.</p>
+        <p>© 2017 ZIONSLIFTS. All rights reserved.</p>
     </footer>
 </body>
 </html>
