--- a/services.html
+++ b/services.html
@@ -89,7 +89,7 @@
         </section>
     </div>
     <footer>
-        <p>© 2024 LiftLogic. All rights reserved.</p>
+        <p>© 2017 ZIONSLIFTS. All rights reserved.</p>
     </footer>
 </body>
 </html>
